<?xml version="1.0" encoding="utf-8"?>

<!-- Main menu screen with nav buttons. -->
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".MainViewActivity">

    <!-- Screen title for dashboard -->
    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/mainview_title"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Button opens user profile screen -->
    <Button
        android:id="@+id/btn_user_profile"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="48dp"
        android:text="@string/mainview_btn_user_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        app:layout_constraintWidth_percent="0.8" />

    <!-- Button opens inventory list screen -->
    <Button
        android:id="@+id/btn_existing_inventories"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="24dp"
        android:text="@string/mainview_btn_inventory_view"
        app:layout_constraintEnd_toEndOf="@+id/btn_user_profile"
        app:layout_constraintStart_toStartOf="@+id/btn_user_profile"
        app:layout_constraintTop_toBottomOf="@+id/btn_user_profile" />

    

</androidx.constraintlayout.widget.ConstraintLayout>
